samples/_failures_safe/1761647893_6dc61b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4753226e.c: In function ‘main’:
./samples/SAFE/__tmp_4753226e.c:197:5: error: expected expression at end of input
  197 |     while (cycles <
      |     ^~~~~
./samples/SAFE/__tmp_4753226e.c:197:5: error: expected declaration or statement at end of input
